fix: timeList 내 userGoalList 데이터가 들어가지 않는 오류 수정